<resources>
    <string name="app_name">The Chill Pill</string>
    <string name="camera_permission_confirmation">This app demonstrates the usage of CameraView. In order to do that, it needs permission to access camera.</string>
    <string name="camera_permission_not_granted">Camera App cannot work without camera permission.</string>
    <string name="picture_taken">Picture taken</string>
    <string name="description">description</string>
    <string name="your_name">Your Name*</string>
    <string name="your_age">Your Age*</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="save_now">Save Now</string>
    <string name="phone_number">Enter Phone Number</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="login">Login</string>
    <string name="appointments">Appointments</string>
    <string name="medicines">Medicines</string>
    <string name="your_dashboard">Your Dashboard</string>
</resources>
