<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".Details">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="Let's Get Started !!!"
        android:textColor="@color/bold_color"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="serif-monospace"
        android:gravity="center"
        android:text="Help Us Know You Better"
        android:textColor="#000"
        android:textSize="25sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="15dp"
            android:contentDescription="@string/description"
            android:src="@drawable/person" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColorHint="@color/hint_color">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:hint="@string/your_name"
                android:inputType="text"
                android:paddingStart="10dp"
                android:textSize="20dp"
                tools:ignore="RtlSymmetry,SpUsage" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="17dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="15dp"
            android:contentDescription="@string/description"
            android:padding="6dp"
            android:src="@drawable/age_img" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColorHint="@color/hint_color">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:hint="@string/your_age"
                android:inputType="number"
                android:paddingStart="10dp"
                android:textSize="20dp"
                tools:ignore="RtlSymmetry,SpUsage" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        android:gravity="end"
        android:orientation="horizontal"
        android:weightSum="3"
        tools:ignore="UseCompoundDrawables">

        <TextView
            android:id="@+id/male"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="@drawable/save_now_bg"
            android:gravity="center"
            android:text="@string/male"
            android:textColor="@color/white"
            android:textSize="19dp"
            tools:ignore="SpUsage" />

        <TextView
            android:id="@+id/female"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="@drawable/save_now_bg_2"
            android:gravity="center"
            android:text="@string/female"
            android:textColor="@color/black"
            android:textSize="19dp"
            tools:ignore="SpUsage" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/save"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/save_now_bg"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginEnd="5dp"
            android:contentDescription="@string/description"
            android:src="@drawable/ok" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/save_now"
            android:textColor="@color/white"
            android:textSize="22dp"
            tools:ignore="SpUsage" />


    </LinearLayout>

</LinearLayout>